--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,5 +20,6 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', sans-serif;
+  background-color: #FFFFF4;
 }
